<resources>
	<string name="app_name" translatable="false">Coriolan</string>
	<string name="tab_learning">Learning</string>
	<string name="tab_edit">Edit</string>
	<string name="tab_statistics">Statistics</string>
	<string name="tab_settings">Settings</string>
	<string name="exercise_flashcards">Flashcards</string>
	<string name="exercise_preview">Preview</string>
	<string name="assignment_accomplished_congratulation">Congratulations! You have completed all the tasks
		in this deck for today.</string>
	<string name="import__category_title">Import</string>
	<string name="import_from_file">Import from file</string>
	<string name="import_success">Cards were imported successfully</string>
	<string name="import_file_enter_file_path">Enter the path of the file to import from:</string>
	<string name="import_file_does_not_exist">File \"%s\" does not exist</string>
	<string name="import_file_empty_path">Please enter the file path</string>
	<string name="decks_default">Default</string>
	<string name="decks_select_deck">Select deck:</string>
	<string name="decks__category_title">Decks</string>
	<string name="decks__type__passive">Passive vocabulary</string>
	<string name="decks__type__active">Active vocabulary</string>
	<string name="deck_content_cards">Cards:</string>
	<string name="deck_options_study_random">Study in random order</string>
	<string name="deck_options_study_straightforward">Study in order added</string>
	<string name="deck_options_study_newest_first">Study in reverse order (newest first)</string>
	<string name="deck_options_study_more">Study more</string>
	<string name="deck_options_details">Details</string>
	<string name="deck_options_study_more__title">Study more: %s</string>
	<string name="decks_list_nothing_to_learn_dialog_title">You\'re done here!</string>
	<string name="decks_list_nothing_to_learn_dialog_description">You have reached your targets
		for today in this deck, congratulations! Come back tomorrow for more.</string>
	<string name="decks_list_suggest_study_more_dialog_title">You\'re done here!</string>
	<string name="decks_list_suggest_study_more_dialog_description">You have reached your targets
		for today in this deck, congratulations! Do you want to study even further?</string>
	<string name="decks_list_suggest_study_more_dialog_cta">STUDY MORE</string>
	<string name="decks_list_deck_empty_dialog_title">Empty deck</string>
	<string name="decks_list_deck_empty_dialog_description">This deck is still empty. Do you want to add new words to it?</string>
	<string name="decks_list_deck_empty_dialog_cta">ADD CARDS</string>
	<string name="deck_details_new">New:</string>
	<string name="deck_details_in_progress">In progress:</string>
	<string name="deck_details_learnt">Learnt:</string>
	<string name="deck_details_total">Total:</string>
	<string name="deck_details_passive_vocabulary">Passive vocabulary</string>
	<string name="deck_details_active_vocabulary">Active vocabulary</string>
	<string name="deck_details_summary">Summary</string>
	<string name="increase_limits__new">New:</string>
	<string name="increase_limits__review">Review:</string>
	<string name="increase_limits__error__wrong_new">The value for \"New\" is incorrect</string>
	<string name="increase_limits__error__wrong_review">The value for \"Review\" is incorrect</string>
	<string name="increase_limits__study">STUDY</string>
	<string name="cards_yes">Yes</string>
	<string name="cards_no">No</string>
	<string name="cards_hard">Hard</string>
	<string name="cards_easy">Easy</string>
	<string name="cards_reject">Put aside</string>
	<string name="cards_accept">Got it!</string>
	<string name="cards_tap_to_show_answer">Tap on the question mark to show the answer</string>
	<string name="card_badge_new">New\nword</string>
	<string name="learning_menu_undo">Undo</string>
	<string name="learning_menu_edit_card">Edit card</string>
	<string name="learning_menu_delete_card">Delete card</string>
	<string name="deleting_card__are_you_sure">Are you sure you want to permanently delete this card?
		This action cannot be undone.</string>
	<string name="edit__add_new_cards">Add new cards</string>
	<string name="edit_card__original">Original (%s):</string>
	<string name="edit_card__translations">Translations (%s):</string>
	<string name="edit_card__transcription">Transcription (optional):</string>
	<string name="edit_card__added">Card added successfully</string>
	<string name="edit_card__saved">Card updated successfully</string>
	<string name="edit_card__deck">Deck:</string>
	<string name="edit_card__add_translation">add another translation…</string>
	<string name="add_card__duplicate">Such a card already exists in the deck \"%s\"</string>
	<string name="add_edit_card__confirm_exist__title">Confirm exit</string>
	<string name="add_edit_card__confirm_exist__message">You have unsaved changes that will be lost if you
	leave the screen now. Leave the screen anyway?</string>
	<string name="add_deck__title">Create new deck</string>
	<string name="add_deck__enter_name">Enter the name:</string>
	<string name="add_deck__failed_to_create">Failed to create a deck with the name %s</string>
	<string name="add_deck__failed_to_update">Failed to rename the deck</string>
	<string name="add_deck__failed_already_exists">Deck with the name \"%s\" already exists</string>
	<string name="add_deck__empty_name">Please enter the name of the deck</string>
	<string name="edit_deck__option_title">Edit</string>
	<string name="edit_deck__title">Edit deck</string>
	<string name="delete_deck__title">Delete deck</string>
	<string name="delete_deck__message">Are you sure you want to delete the deck \"%s"\? This action cannot be undone.</string>
	<string name="delete_deck__failed">Failed to delete the deck \"%s\": this deck is not empty. Move all its cards to
	other decks first and then retry.</string>
	<string name="create_domain__title">Add new language</string>
	<string name="edit_domain__title">Edit language</string>
	<string name="create_domain__label_first_start__welcome">Welcome!</string>
	<string name="create_domain__label_first_start__text">To proceed, we only need to know which language you are
	going to study with Coriolan, and which language you will use to translate the new words into!</string>
	<string name="create_domain__specify_original_lang">The language you learn:</string>
	<string name="create_domain__specify_original_lang_hint">(e.g. Chinese)</string>
	<string name="create_domain__specify_translations_lang">Your native language (or the one you will use for translations):</string>
	<string name="create_domain__specify_translations_lang_hint">(e.g. English)</string>
	<string name="create_domain__verify__empty_original">Please specify the language you learn</string>
	<string name="create_domain__verify__empty_translations">Please specify the language you will use for translations</string>
	<string name="create_domain__error__already_exists">This language is already added!</string>
	<string name="create_domain__error__generic">Failed to add language</string>
	<string name="update_domain__error__generic">Failed to update the language</string>
	<string name="create_domain__created">Language added successfully</string>
	<string name="update_domain__success">Language is updated successfully</string>
	<string name="create_domain__translations_lang_change">CHANGE</string>
	<string name="domains_list__add">Add new language to learn…</string>
	<string name="domains_list__subtitle">What do you feel like studying?</string>
	<string name="domains_list__edit">Edit language</string>
	<string name="domains_list__delete">Delete language</string>
	<string name="delete_domain__title">Are you sure?</string>
	<string name="delete_domain__message">You are about to delete language: %1$s.
		All words and decks associated with this language will be deleted. There is no way to undo.
		It\'s the best to create a backup before you proceed.</string>
	<string name="delete_domain__ok">DELETE</string>
	<string name="settings__title">Settings</string>
	<string name="settings__category__daily_limits">Daily targets</string>
	<string name="settings_daily_limit_use">Limit the maximum daily amount of new and review cards</string>
	<string name="settings__daily_limit_new_cards">New cards per day</string>
	<string name="settings__daily_limit_review">Reviews per day</string>
	<string name="settings__daily_limit_no_limit">No limit</string>
	<string name="settings__daily_limit_leave_blank">Enter the maximum amount of cards to study per day, or leave the field blank to have no limit</string>
	<string name="settings__category__general">General</string>
	<string name="settings__version">Version</string>
	<string name="settings__error_number_negative">Number \"%s\" is incorrect, must be non-negative.</string>
	<string name="settings__error_number_incorrect">Number \"%s\" is incorrect.</string>
	<string name="settings__category__backup">Backup</string>
	<string name="settings__category__advanced_learning">Advanced learning preferences</string>
	<string name="settings__forward_and_reverse">Mix passive and active</string>
	<string name="settings__mix_forward_and_reverse">Passive and active vocabulary will be mixed in one deck</string>
	<string name="settings__separate_forward_and_reverse">Passive and active vocabulary will appear as separate decks</string>
	<string name="backup__category_title">Backup</string>
	<string name="backup__create_title">Create backup</string>
	<string name="backup__create_rationale">Back up is a full copy of your Coriolan data.
		It is wise to create backups from time to time and store them somewhere else (e.g. in your Google Drive) for the case
		if something goes wrong with the app or with your device. Making backups regularly, you will make sure that in case
		something upleasant happens, the data you lose will be minimal.\n\nBe mindful that creating a backup might take
		some time (up to a couple of minutes) depending on how large your collection is.
	</string>
	<string name="backup__create_backup_button">Create backup now</string>
	<string name="backup__creating">We are creating you backup. It may take some time. Please be patient…</string>
	<string name="backup__created">Done! You backup was created under:</string>
	<string name="backup__creation_failed">Failed to create backup :(</string>
	<string name="backup__restore_title">Restore from backup</string>
	<string name="backup__restore_rationale">If you have a copy of your data stored on your device and don\'t have it
		in Coriolan for some reason, you can easily restore you data from there.
		This can also be used for migrating data from one device to another. \n\nWarning!
		Restoring from a backup will override all your current data with the one from the backup,
		so any additional changes will be lost.
	</string>
	<string name="backup__restore_select_and_restore">Select file and restore</string>
	<string name="backup__restore_select_file">Select backup file:</string>
	<string name="backup__restoring_1">Selected backup to restore from:</string>
	<string name="backup__restoring_2">We are now restoring your data. It may take some time. Please be patient…</string>
	<string name="backup__restore_failed">Failed to restore data from this backup. You local data was not changed.</string>
	<string name="backup__restore_final_warning_title">Possible data loss!</string>
	<string name="onboarding_skip">SKIP</string>
	<string name="onboarding_done">DONE</string>
	<string name="onboarding_next">Next</string>
	<string name="statistics_panel_cards_by_learning_progress">Cards by learning progress</string>
	<string name="statistics_panel_cards_studied_by_day">Cards studied by day</string>
	<string name="statistics_panel_cards_added_by_day">Cards added by day</string>
	<string name="statistics_card_status_forgot">Forgot:</string>
	<string name="button_submit">Submit</string>
	<string name="button_create">Create</string>
	<string name="button_cancel">Cancel</string>
</resources>