<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/settings__title">

	<PreferenceCategory android:title="@string/settings__category__daily_limits">

		<AutoSummaryEditTextPreference
			android:key="daily_limit_new_cards"
			android:inputType="numberSigned"
			android:title="@string/settings__daily_limit_new_cards"
			android:summary="@string/settings__daily_limit_no_limit"
			android:dialogMessage="@string/settings__daily_limit_leave_blank"/>

		<AutoSummaryEditTextPreference
			android:key="daily_limit_review_cards"
			android:inputType="numberSigned"
			android:title="@string/settings__daily_limit_review"
			android:summary="@string/settings__daily_limit_no_limit"
			android:dialogMessage="@string/settings__daily_limit_leave_blank"/>

	</PreferenceCategory>

</PreferenceScreen>