<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">

	<ir.mahozad.android.PieChart
		android:id="@+id/panel_cards_by_learning_progress"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_margin="@dimen/spacing__small"
		android:orientation="vertical">

		<TextView
			style="@style/Statistics.LegendEntry.Title"
			app:drawableTint="@color/statistics_new"
			android:text="@string/deck_details_new" />

		<TextView
			android:id="@+id/cards_by_learning_progress_legend_new"
			style="@style/Statistics.LegendEntry"
			tools:text="123" />

		<TextView
			style="@style/Statistics.LegendEntry.Title"
			app:drawableTint="@color/statistics_in_progress"
			android:text="@string/deck_details_in_progress" />

		<TextView
			android:id="@+id/cards_by_learning_progress_legend_in_progress"
			style="@style/Statistics.LegendEntry"
			tools:text="123" />

		<TextView
			style="@style/Statistics.LegendEntry.Title"
			app:drawableTint="@color/statistics_learnt"
			android:text="@string/deck_details_learnt" />

		<TextView
			android:id="@+id/cards_by_learning_progress_legend_learnt"
			style="@style/Statistics.LegendEntry"
			tools:text="123" />

		<TextView
			style="@style/Statistics.LegendEntry.Title"
			app:drawableTint="@color/statistics_forgot"
			android:text="@string/statistics_card_status_forgot" />

		<TextView
			android:id="@+id/cards_by_learning_progress_legend_forgot"
			style="@style/Statistics.LegendEntry"
			tools:text="2" />

		<TextView
			style="@style/Statistics.LegendEntry.Title"
			android:layout_marginTop="@dimen/spacing__medium"
			android:text="@string/deck_details_total" />

		<TextView
			android:id="@+id/cards_by_learning_progress_legend_total"
			style="@style/Statistics.LegendEntry"
			tools:text="349" />

	</LinearLayout>

</LinearLayout>