<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:paddingBottom="@dimen/spacing__very_large">

		<TextView
			style="@style/Statistics.Label"
			android:text="@string/statistics_panel_cards_by_learning_progress" />

		<include
			android:id="@+id/statistics_cards_by_progress"
			layout="@layout/statistics_cards_by_progress" />

		<TextView
			style="@style/Statistics.Label"
			android:text="@string/statistics_panel_cards_studied_by_day" />

		<com.github.mikephil.charting.charts.LineChart
			android:id="@+id/cards_studied_by_day"
			style="@style/Statistics.LineChart" />

		<TextView
			style="@style/Statistics.Label"
			android:text="@string/statistics_panel_cards_added_by_day" />

		<com.github.mikephil.charting.charts.LineChart
			android:id="@+id/cards_added_by_day"
			style="@style/Statistics.LineChart" />

	</LinearLayout>
</ScrollView>