<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

	<include layout="@layout/app_toolbar"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="10dp">

		<TextView
			style="@style/Coriolan.Text.Caption.Label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:text="@string/import_file_enter_file_path"
			android:labelFor="@id/editText"/>

		<EditText
			android:id="@+id/editText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:inputType="textUri"/>

		<TextView
			style="@style/Coriolan.Text.Caption.Label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:text="@string/decks_select_deck"
			android:labelFor="@id/deckSelector"/>

		<com.ashalmawia.coriolan.ui.view.DeckSelector
			android:id="@+id/deckSelector"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<LinearLayout
			style="?attr/buttonBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end">

			<Button
				android:id="@+id/buttonCancel"
				style="?attr/buttonBarNegativeButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_cancel"/>

			<Button
				android:id="@+id/buttonSubmit"
				style="?attr/buttonBarPositiveButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_submit"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>