<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

	<include layout="@layout/app_toolbar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/spacing__medium">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/backup__create_rationale"/>

			<include
				android:id="@+id/dividerCreating"
				layout="@layout/divider_horizontal"
				android:visibility="gone"/>

			<TextView
				android:id="@+id/labelCreating"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/backup__creating"
				android:visibility="gone"/>

			<ProgressBar
				android:id="@+id/progress"
				style="@style/Widget.AppCompat.ProgressBar.Horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing__medium"
				android:visibility="gone"/>

			<include
				android:id="@+id/dividerCreated"
				layout="@layout/divider_horizontal"
				android:visibility="gone"/>

			<TextView
				android:id="@+id/labelCreated"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"/>

			<TextView
				android:id="@+id/labelPath"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:visibility="gone"/>

			<LinearLayout
				style="?attr/buttonBarStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_marginTop="@dimen/spacing__large">

				<Button
					android:id="@+id/buttonCancel"
					style="?attr/buttonBarNegativeButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/button_cancel"/>

				<Button
					android:id="@+id/buttonOk"
					style="?attr/buttonBarPositiveButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/backup__create_backup_button"/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>