<?xml version="1.0" encoding="utf-8"?>
<com.ashalmawia.coriolan.ui.view.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="@dimen/card_margin_horizontal"
		android:layout_marginRight="@dimen/card_margin_horizontal"
		android:layout_marginTop="@dimen/spacing__largest"
		android:layout_weight="1"
		app:cardElevation="@dimen/card_elevation">

		<TextView
			android:id="@+id/frontText"
			style="@style/CardText"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:text="shrimp"/>

		<ImageView
			android:id="@+id/frontCover"
			style="@style/CardCover"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:visibility="gone"
			/>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginBottom="@dimen/spacing__largest"
		android:layout_marginLeft="@dimen/card_margin_horizontal"
		android:layout_marginRight="@dimen/card_margin_horizontal"
		android:layout_marginTop="@dimen/spacing__very_large"
		android:layout_weight="1"
		app:cardElevation="@dimen/card_elevation">

		<TextView
			android:id="@+id/backText"
			style="@style/CardText"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:text="креветка"/>

		<ImageView
			android:id="@+id/backCover"
			style="@style/CardCover"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:visibility="visible"
			/>

	</android.support.v7.widget.CardView>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/showAnswerButton"
			style="@style/CardButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/neutral"
			android:text="@string/cards_click_to_show_answer"/>

		<LinearLayout
			android:id="@+id/buttonsBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/buttonNo"
				style="@style/CardButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/wrong"
				android:text="@string/cards_no"/>

			<Button
				android:id="@+id/buttonHard"
				style="@style/CardButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/hard"
				android:text="@string/cards_hard"/>

			<Button
				android:id="@+id/buttonYes"
				style="@style/CardButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/correct"
				android:text="@string/cards_yes"/>

			<Button
				android:id="@+id/buttonEasy"
				style="@style/CardButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/easy"
				android:text="@string/cards_easy"/>

		</LinearLayout>

	</FrameLayout>

</com.ashalmawia.coriolan.ui.view.CardView>