<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<include layout="@layout/app_toolbar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/spacing__medium">

			<TextView
				style="@style/Coriolan.Text.Label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/edit_card__deck"/>

			<com.ashalmawia.coriolan.ui.commons.DeckSelector
				android:id="@+id/deckSelector"
				style="@style/Coriolan.Text.Body.Large"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<TextView
				android:id="@+id/labelOriginal"
				style="@style/Coriolan.Text.Label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing__medium"
				tools:text="Original:"/>

			<com.ashalmawia.coriolan.ui.add_edit.AddEditCardItemView
				android:id="@+id/original"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>

			<TextView
				style="@style/Coriolan.Text.Label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing__medium"
				android:text="@string/edit_card__transcription" />

			<com.ashalmawia.coriolan.ui.add_edit.AddEditCardItemView
				android:id="@+id/transcription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>

			<TextView
				android:id="@+id/labelTranslations"
				style="@style/Coriolan.Text.Label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing__large"/>

			<LinearLayout
				android:id="@+id/translationsContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				/>

			<LinearLayout
				android:id="@+id/addTranslation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="@dimen/spacing__very_large">

				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/mockInputField"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_marginEnd="33dp"
					android:layout_weight="1"
					android:focusable="false"
					android:gravity="end"
					android:hint="@string/edit_card__add_translation"
					android:inputType="text"
					android:textColorHint="@color/colorPrimary__60"
					android:textSize="14sp"
					android:textStyle="italic"
					app:backgroundTint="@color/colorPrimary__60"/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>